
===========================================================================
                               Release History
===========================================================================

3.8.1 to 3.9: (XXXXX xx, 2013)

  * Disassembly from debugger ...

  * Fixed redundant "New console created" message when entering the same
    ROM multiple times from the ROM launcher.

-Have fun!


3.8 to 3.8.1: (March 3, 2013)

  * Added support for TIA RSYNC writes, thanks to Omegamatrix of AtariAge.
    This allows the recently released "Extra Terrestrials" ROM to run, as
    well as improving emulation of "Fatal Run" and several other test ROMs.

  * Fixed typo in TIA HMOVE writes, thanks to Thomas Jentzsch.  This fixes
    the constant collision issues in "Kool-Aid Man", and several other
    homebrew ROMs.

  * Fixed sound issues on OSX PPC machines (all sound was in little-endian
    format, but PPC is big-endian).

  * The OSX DMG archive now contains proper modification dates.


3.7.5 to 3.8: (February 21, 2013)

  * Huge changes to the sound system:
      - The sound code now uses 16-bit signed samples instead of 8-bit
        unsigned samples, making it more compatible with a wider variety of
        systems.
      - Improved sound output for several ROMs, including "Space Rocks"
        (the 'heartbeat' sound can now be clearly heard).
      - The 'volume clipping' option has been removed, since in 16-bit
        mode it's no longer needed.
      - The 'Tia freq' option has been removed.
      - Selecting more common sample rates (other than 31400) now works
        much better, but there are still a few ROMS (like Quadrun) where
        31400Hz still works best.

  * Many changes to handling ZIP archives:
      - Files in multiple levels are now recognized.  This fixes issues
        in Windows where such files couldn't be loaded at all, and in all
        systems where ROMs with the same name (but in different