@@ -18,8 +18,8 @@ foreach $infile (@files)
   # Update date
   foreach $line (<IN>)
   {
-	  $line =~ s/1995-20../1995-2013/;
-  	print OUT $line;
+    $line =~ s/1995-20../1995-2013/;
+    print OUT $line;
   }
 
   close(IN);
